# magpie-haskell

./: .gitignore  ANALYSIS.md  Anagram.hs  CLAUDE.md  KWG.hs  Main.hs  NOTES.md  README.md  magpie.cabal
app/: Main.hs
data/letterdistributions/: catalan.csv  dutch.csv  english_super.csv  french.csv
data/lexica/: CSW21.klv2  FRA20.klv2  TWL06.klv2  TWL06.kwg  TWL14.klv2  TWL14.kwg  TWL14.txt  TWL98.klv2  TWL98.kwg
data/strategy/: winpct.csv
src/: Magpie.hs
src/Magpie/: Autoplay.hs  BitRack.hs  Board.hs  Equity.hs  Game.hs  KLV.hs  KWG.hs  LeaveMap.hs  LetterDistribution.hs  MoveGen.hs  Shadow.hs  Types.hs  WMP.hs  WMPMoveGen.hs
test/: CrossSetTest.hs  DebugCGP.hs  DebugEquity.hs  DebugExchange.hs  DebugKLV.hs  EquityTest.hs  MoveGenTest.hs  ShadowMoveGenTest.hs  ShadowTest.hs  TestKLVValues.hs  WMPMoveGenTest.hs  WMPTest.hs
